--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
 
+@font-face{
+  font-family: 'iCielMedium';
+  src: local('iCielMedium'), url('./fonts/iCiel-Medium.ttf') format('true');
+  font-weight: normal;
+}
+
+
 *{
   margin: 0;
 }
@@ -7,7 +14,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'iCielMedium', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
