--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -6,6 +6,7 @@
     background-size: cover;
     display: flex;
     justify-content: center;
+    scroll-snap-align: start;
 
 }
 
@@ -29,7 +30,9 @@
 
 .item_textDesc{
     font-weight: 200;
-    font-size: 18px;
+    font-size: 17px;
+    font-weight: normal;
+    margin-top: 7px;
 }
 
 .item__lowerThird{
@@ -46,5 +49,6 @@
     color: white;
     width: 100%;
     margin-top: 3%;
+    display: flex;
     justify-content: center;
 }
